# soketi-with-django

./: Dockerfile  compose.yaml  environment.yml  pyproject.toml
config/: settings.py  urls.py
